# FastPrefix

./: ChangeLog  Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac
autom4te.cache/: output.0  output.1  requests  traces.1  traces.2
csvimport/: Makefile  Makefile.am  Makefile.in  Process.cpp  Process.h  Util.cpp  Util.h  csvimport  csvimport.cpp  include.h
csvimport/.deps/: csvimport-Process.Po  csvimport-Util.Po  csvimport-csvimport.Po
datamanager/: Makefile  Makefile.am  Makefile.in  Normalization.h  Ocurrence.cpp  Ocurrence.h  Record.cpp  Record.h  Tokenizer.cpp  Tokenizer.h  include.h
datamanager/.deps/: libdatamanager_a-Ocurrence.Po  libdatamanager_a-Record.Po  libdatamanager_a-Tokenizer.Po
src/: FastPrefixDispatcher.cpp  FastPrefixDispatcher.h  FastPrefixServer.cpp  FastPrefixServer.h  FastPrefixThread.cpp  FastPrefixThread.h  Makefile  Makefile.am  Makefile.in  QueryAction.cpp  QueryAction.h  ReloadAction.cpp  ReloadAction.h  fastprefix  fastprefix.cpp  fastprefix.ini
src/.deps/: fastprefix-FastPrefixDispatcher.Po  fastprefix-FastPrefixServer.Po  fastprefix-FastPrefixThread.Po  fastprefix-QueryAction.Po  fastprefix-ReloadAction.Po  fastprefix-fastprefix.Po
