noinst_LIBRARIES = libdatamanager.a


#include_HEADERS = \
#        daework-include.h \
#        daework-kernel.h \
#        daework-support.h 

libdatamanager_a_SOURCES = \
        include.h \
        Normalization.h \
        Ocurrence.cpp \
        Ocurrence.h \
        Record.cpp \
        Record.h \
        Tokenizer.cpp \
        Tokenizer.h

libdatamanager_a_CXXFLAGS = -O3
#libdaework_a_LDFLAGS = -version-info 0:1:0
